// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatetimeInput > and the input is disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-base-200 shadow-none bg-base-200 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_1_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        disabled=""
        placeholder="Choose date of birth"
        type="text"
        value="Dec 23, 2024, 12:00 AM"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > and the user enters a natural language text and clicks out 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_3_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="Jun 3, 2026, 12:00 PM"
      />
    </div>
  </div>
  <div
    data-testid="outside"
  />
</DocumentFragment>
`;

exports[`DatetimeInput > and the user enters a natural language text and clicks out 2`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_3_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    data-testid="outside"
  />
</DocumentFragment>
`;

exports[`DatetimeInput > and the user enters a natural language text and presses Enter key 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_2_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="Jun 3, 2026, 12:00 PM"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > and the user selects a date from the calendar 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_4_"
        aria-expanded="true"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="open"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="Dec 12, 2024, 10:15 PM"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > and the user's browser is in a 'en-GB' locale 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_6_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="3 Jun 2026, 12:00 pm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > and the user's browser is in a 'es-ES' locale 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_7_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="3 jun 2026, 12:00 p. m."
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > and the user's browser is in a 'fr-FR' locale 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_5_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        aria-label="Enter anything"
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="e.g. "tomorrow at 5pm" or "in 2 hours""
        type="text"
        value="3 juin 2026, 12:00 PM"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has accent variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-accent shadow-accent [&:has(input:focus)]:outline-accent [&:has(input:focus-within)]:outline-accent min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_h_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="accent badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has default variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-[currentColor] [&:has(input:focus-within)]:border-[currentColor] [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_e_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="default badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has error variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-error shadow-error [&:has(input:focus)]:outline-error [&:has(input:focus-within)]:outline-error min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_m_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="error badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has ghost variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border-base-content/20 shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border-0 shadow-none [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_i_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="ghost badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has info variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-info shadow-info [&:has(input:focus)]:outline-info [&:has(input:focus-within)]:outline-info min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_j_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="info badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has large (lg) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 h-16 text-lg px-3 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_d_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset size-10"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 input-lg flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-11 px-3"
        placeholder="DatetimeInput large"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has medium (md) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 h-12 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_c_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset size-9"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 input-md flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-9 px-2"
        placeholder="DatetimeInput medium"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has no outline 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_9_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="DatetimeInput has no outline"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has outline 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border min-h-fit h-10 text-sm border-base-content/20 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_8_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="DatetimeInput has outline"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has primary variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-primary shadow-primary [&:has(input:focus)]:outline-primary [&:has(input:focus-within)]:outline-primary min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_f_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="primary badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has secondary variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-secondary shadow-secondary [&:has(input:focus)]:outline-secondary [&:has(input:focus-within)]:outline-secondary min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_g_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="secondary badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has small (sm) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 h-8 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_b_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset size-6"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 input-sm flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-6 px-1"
        placeholder="DatetimeInput small"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has success variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-success shadow-success [&:has(input:focus)]:outline-success [&:has(input:focus-within)]:outline-success min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_k_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="success badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has tiny (xs) size 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 h-6 text-xs px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_a_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset size-4 p-0 rounded-xs"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 input-xs flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-4 px-1"
        placeholder="DatetimeInput tiny"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > has warning variant 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="shadow-2xs flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-warning shadow-warning [&:has(input:focus)]:outline-warning [&:has(input:focus-within)]:outline-warning min-h-fit h-10 text-sm"
    >
      <button
        aria-controls="radix-_r_l_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="warning badge"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > renders a default date 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="Choose date of birth"
        type="text"
        value="Dec 23, 2024, 12:00 AM"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatetimeInput > when the component is controlled > and the user changes the date date 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center flex-nowrap"
  >
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between w-fit px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit h-10 text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content"
    >
      <button
        aria-controls="radix-_r_n_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="btn btn-default min-h-fit size-8 rounded-md p-1 flex items-center justify-center font-normal outline-hidden focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-base-content focus-visible:ring-inset"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span
          class="sr-only"
        >
          calendar
        </span>
      </button>
      <input
        class="input rounded-md transition-all duration-100 min-h-fit flex-1 border-none bg-transparent outline-hidden ring-0 focus:outline-hidden focus:ring-0 focus-within:outline-hidden focus-within:ring-0 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-2"
        placeholder="Choose date of birth"
        type="text"
        value="Invalid Date"
      />
    </div>
  </div>
</DocumentFragment>
`;
